--- a/css.css
+++ b/css.css
@@ -95,6 +95,7 @@
         margin:0 10px;
         filter: saturate(75%) ;
         
+        
       }
 
       .hero2 {
@@ -111,9 +112,9 @@
         top: 0;
         right: 0;
         height: 100%;
-        width: 48%;
-        background-color: rgba(71, 80, 76, 0.548);
-        clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 100% 100%, 30% 100%);
+        width: 40%;
+        background-color: rgba(71, 80, 76, 0.648);
+        clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 100% 100%, 26% 100%);
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -181,7 +182,7 @@
       p#p1{
         background-color:rgba(211, 188, 75, 0.953);
         display: inline;
-        padding:7px 20px;
+        padding:15px 27px;
         border-radius: 30px;
       }
 
@@ -275,7 +276,31 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-    }
+      }
+
+      .blue-skewed{
+        width: 55% !important;
+      }
+
+
+       h1{
+        font-size: 39px !important;
+      }
+      h3{
+        font-size: 30px !important;
+      }
+       p{
+        font-size: 25px !important;
+      }
+      a{
+        font-size: 25px !important;
+      }
+      span{
+        font-size: 27px !important;
+      }
+      p#p3{
+        font-size: 50px !important;
+      }
     }
 
 
@@ -440,10 +465,11 @@ section#sec1{
 }
 
 section h1 {
-  font-size:20px;padding:20px 0px;
+  font-size:27px;
+  padding:10px 0px;
 }
 section h3 {
-  font-size:20px;
+  font-size:22px;
 }
 
 
@@ -515,12 +541,14 @@ section h3 {
 
 
 p.title{
-  margin-top: 17px;
+  margin: 20px;
   padding: 30px;
+  padding-right: 20px;
   font-size:20px;
   font-weight: bolder;
   line-height: 34px;
-  border-right:solid #1e64c8;
+  border-right:4px solid #1e64c8;
+  
 }
 
 
